Add static task lists

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
             <i class="fa fa-refresh"></i>
         </div>
         <hr class="line">
-        <form>
+        <form class="task-form">
             <input class="task-input" type="text" placeholder="Add to your list...">
             <button class="task-add-button"><i class="uil uil-enter"></i></button>
         </form>
