Add clear tasks functionality

--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,9 @@
         <ul class="task-list">
 
         </ul>
-        <p class="clear-paragraph">
-            Clear all completed
-        </p>
+        <button class="clear-button">
+            <a href="#">Clear all completed</a>
+        </button>
     </main>
 </body>
 </html>
