Ensure javascript, html and css best practices

--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,11 @@
     <main class="main">
         <div class="header">
             <h1>Today's To Do</h1>
-            <i class="fa fa-refresh"></i>
+            <i class="light-grey fa fa-refresh"></i>
         </div>
         <form class="task-form">
             <input class="task-input" type="text" placeholder="Add to your list...">
-            <button class="task-add-button"><i class="uil uil-enter"></i></button>
+            <button class="task-add-button light-grey"><i class="uil uil-enter"></i></button>
         </form>
         <ul class="task-list">
 
